Fix overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,8 +61,13 @@ img.muted:not(:hover) {
 body {
   background: rgb(255,255,255);
   background: linear-gradient(160deg, rgba(255,255,255,1) 26%, rgba(250,132,0,0.6656863428965336) 85%); 
-  min-height: 100vh;
  }
+
+ body, html {
+  width: 100vw;
+  min-height: 100vh;
+  overflow: hidden;
+}
 
  .d-flex {
    gap: 1.5rem;
